# simple-budget

./: .dockerignore  .gitignore  .tool-versions  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.local  LICENSE  README.md  cloudbuild.yml  coveralls.json  docker-compose.yaml  docker-compose.yml  fly.toml  mix.exs  package-lock.json  package.json  pnpm-lock.yaml  release.sh  schema.sql  tailwind.config.js  tsconfig.json  vite.config.ts
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.yml  postCreate.sh
.github/: dependabot.yml
.github/instructions/: agent.instructions.md
.github/workflows/: branch-protection.yaml  branch-protection.yml  ci.yml  codeql.yml  continuous-delivery.yaml  continuous-delivery.yml
.zed/: settings.json
api/: .gitignore  mix.exs
api/config/: config.exs  dev.exs  test.exs
api/lib/: budget_web.ex
api/test/: test_helper.exs
assets/: .eslintrc  elm.json  input.css  jest.config.js  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.prod.js
assets/js/: Main.elm  Model.elm  app.js  app.scss  csrf.js  elm.json  util.js
assets/src/: Main.elm  Model.elm  home.jsx  home_loadable.jsx  index.js  index.jsx  index.ts
backend/src/: api.rs  main.rs
config/: config.exs  demo.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
controllers/: form_controller.js  formatter_controller.js
cover/: excoveralls.html  excoveralls.json
dev/: docker-compose.yaml  seed.sql
frontend/: Cargo.toml  index.html
frontend/src/: home.rs  main.rs  navigation.rs
ios/: .gitignore  initialize.sh  project.yml
ios/Sources/: APIService.swift  BudgetViewModel.swift  ContentView.swift  Models.swift  SimpleBudget.swift
k8s/: .gitignore  deploy.sh  deployment.yaml  httproute.yaml  ingress.yaml  ingress_route.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/base/: configmap.yaml  hostname.env.example  httproute.yaml  kustomization.yaml  namespace.yaml  networkpolicies.yaml  resource-name.env.example  secretproviderclass.yaml  secrets.env.example  serviceaccount.yaml
k8s/blue/: kustomization.yaml
k8s/container_cast/: deployment.yaml  role.yaml  role_binding.yaml  service-account.yaml  service.yaml
k8s/deployment/: deployment.yaml  healthcheckpolicy.yaml  kustomization.yaml  namereference.yaml  service.yaml
k8s/green/: kustomization.yaml
lib/: simple_budget_web.ex
lib/budget/: application.ex  repo.ex
lib/budget_web/: gettext.ex  healthcheck_router.ex  router.ex
lib/simple_budget/: application.ex  token.ex  token_auth.ex
lib/simple_budget_web/: auth.ex  endpoint.ex  healthcheck_router.ex  router.ex
migrations/: 0000_use_numeric_types.sql  0001_add_accumulated_amount_to_goals.sql  0002_add_start_date_to_goals.sql  0003_convert_primary_keys_to_uuid.sql  README.md  schema.sql
priv/repo/: seeds.exs
src/: authenticated.rs  authentication.rs  db.rs  errors.rs  jobs.rs  main.rs  middleware.rs  models.rs  test_utils.rs  utilities.rs
src/api/: accounts.rs  savings.rs
src/authenticated/: accounts.rs  dashboard.rs  envelopes.rs  goals.rs  preferences.rs
src/authentication/: callback.rs  client.rs  login.rs  token.rs
src/jobs/: clear_sessions.rs  convert_goals.rs
src/models/: account.rs  envelope.rs  goal.rs  user.rs
src/templates/: _dashboard.html  dashboard.html  layout.html
src/utilities/: dates.rs  handlebars.rs  responses.rs  tera.rs  turbo.rs
static/: app.js
static/controllers/: currency_input_controller.js
templates/: _dashboard.hbs  _dashboard.html  dashboard.hbs  delete_confirmation.hbs  delete_confirmation.html  layout.hbs  layout.html
templates/accounts/: _form.hbs  _form.turbo.hbs  delete.hbs  delete.html  delete.turbo.html  edit.hbs  edit.html  form.html  form.turbo.html  index.hbs  index.html  new.hbs  new.html
templates/authentication/: login.hbs  login.html
templates/envelopes/: _form.hbs  delete.hbs  delete.html  edit.hbs  edit.html  form.html  index.hbs  index.html  new.hbs  new.html  new.turbo.html
templates/goals/: _form.hbs  _form.turbo.hbs  _goal.hbs  _goal.html  _table.hbs  _table.html  delete.hbs  delete.html  delete.turbo.html  edit.hbs  edit.html  form.hbs  form.html  form.turbo.html  index.hbs  index.html  new.hbs  new.html  resets.turbo.hbs  resets.turbo.html
templates/preferences/: goals.hbs  index.hbs  index.html  update.hbs  update.html
test/budget/: token_test.exs
www/: .babelrc  .esformatter  package.json  webpack.common.js  webpack.prod.js
(+267 files in other folders)
