[package]
name = "simple-budget"
version = "2.3.0-dev"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
axum = { version = "0.8.4", features = ["ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie-signed", "query"] }
chrono = { version = "0.4.41" }
chrono-tz = { version = "0.10.3" }
deadpool-postgres = { version = "0.14.1" }
futures-util = { version = "0.3.31" }
include_dir = { version = "0.7.4", features = ["glob"] }
jsonschema = { version = "0.30.0" }
jsonwebtoken = { version = "9.3.1" }
openidconnect = { version = "4.0.0", features = ["reqwest"] }
postgres-types = { version = "0.2.9", features = ["derive"] }
rand = { version = "0.9.1" }
rust_decimal = { version = "1.37.1", features = ["db-tokio-postgres"] }
rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140" }
tera = { version = "1.20.0" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tower-layer = { version = "0.3.3" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
