[package]
name = "simple-budget"
version = "2.3.0-dev"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
axum = { version = "0.8.7", features = ["ws", "macros"] }
axum-extra = { version = "0.12.2", features = ["cookie-signed", "query"] }
chrono = { version = "0.4.42" }
chrono-tz = { version = "0.10.3" }
futures-util = { version = "0.3.31" }
handlebars = "6.3.2"
jsonschema = { version = "0.33.0" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
openidconnect = { version = "4.0.1", features = ["reqwest"] }
postgres-types = { version = "0.2.11", features = ["derive"] }
rand = { version = "0.9.2" }
rust-database-common = { git = "https://github.com/corybuecker/rust-database-common", branch = "main" }
rust-web-common = { git = "https://github.com/corybuecker/rust-web-common", branch = "main" }
rust_decimal = { version = "1.39.0", features = ["db-tokio-postgres"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tower-layer = { version = "0.3.3" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
